Fixed styling for in-app notifications.

--- a/gtk-3.0/Stylus/Containers.styl
+++ b/gtk-3.0/Stylus/Containers.styl
@@ -2,6 +2,13 @@
 
 
 
+.app-notification
+
+    background-color:           MenuColor;
+    bevel:                      2px outset semilight;
+    border-radius:              0.5em;
+    padding:                    0.5em;
+
 .background,
 window
     -GtkWindow-resize-handle:   5;
