--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -28,6 +28,17 @@ button:backdrop,
 button.popup:backdrop {
   color: #898989;
 }
+.app-notification {
+  background-color: #252525;
+  background-clip: border-box;
+  border-color: rgba(174,174,174,0.125);
+  border-bottom-color: rgba(12,12,12,0.125);
+  border-right-color: rgba(12,12,12,0.125);
+  border-style: solid;
+  border-width: 2px;
+  border-radius: 0.5em;
+  padding: 0.5em;
+}
 .background,
 window {
   -GtkWindow-resize-handle: 5;
